# WhatNote_v2

./: UPLOAD_FIX_SUMMARY.md  create_templates.py  current_windows.json  debug_filename_generation.py  debug_json_files.py  debug_save_method.py  debug_upload_process.py  final_upload_demo.py  fixed_windows.json  latest_windows.json  package-lock.json  requirements.txt  test_app_input.py  test_comprehensive_upload.py  test_conversion_fix.py  test_cross_extension_upload.py  test_detailed_upload.py  test_dynamic_extension.py  test_ellipsis.py  test_ellipsis_display.html  test_error_fix.py  test_extension_fix.py  test_file_extension_fix.py  test_filename_sync.py  test_final_comprehensive.py  test_final_final_fix.py  test_final_fix.py  test_final_verification.py  test_generic_window.py  test_icon_rename.py  test_improved_typewriter.py  test_improvements.py  test_keyboard_input.html  test_live_fix.py  test_live_markdown.py  test_live_v2.py  test_live_v3.py  test_multiline_rename.py  test_multiple_file_types.py  test_new_extension.py  (+14 more)
whatnote_v2/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  start.bat  start.py  start.sh  test_persistence.py
whatnote_v2/backend/: __init__.py  config.py  document_converter.py  logger.py  main.py  main.py.backup  run.py  simple_main.py  test_server.py
whatnote_v2/docs/: DIRECTORY_CLEANUP_SUMMARY.md  IMPORT_FIX_SUMMARY.md  PHASE2_FINAL_REPORT.md  PHASE3_COMPLETION_REPORT.md  PROBLEM_SOLUTION_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  USAGE_GUIDE.md
whatnote_v2/frontend/: package-lock.json  package.json
(+353 files in other folders)
